# ToolMap

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  changelog.md  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml  code-coverage.yml  coverity-scan.yml  doxygen-generate.yml  linux-build.yml  osx-build.yml  tests-linux.yml  tests-windows.yml  windows-build.yml
apps/feature_toc/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/feature_toc/art/: feature_toc.icns
apps/feature_toc/cmake_modules/: version.cmake
apps/feature_toc/doc/: ui.fbp
apps/feature_toc/src/: app.cpp  app.h  bitmaps.cpp  bitmaps.h  framemain.cpp  framemain.h  resource.rc  tocctrl.cpp  tocctrl.h  tocctrlmodel.cpp  tocctrlmodel.h  toccustomrenderer.cpp  toccustomrenderer.h  tocrenderer.cpp  tocrenderer.h
art/: toolmap.icns  toolmap2.icns
art/_scripts/: commands.txt  png2wx.pl
ci/appveyor/: cache-version.txt  install.ps1
ci/codecov/: .codecov.yml
ci/travis/: build-gdal-osx.sh  build-gdal.sh  build-mysql.sh  build-proj-osx.sh  build-proj.sh  build-wxpdfdoc.sh  build-wxwidgets-osx.sh  build-wxwidgets.sh  dependencies-linux.sh  dependencies-osx.sh  run-coverage.sh  run-tests-linux-appimage.sh  run-tests-linux.sh  run-tests-osx.sh
doc/: Doxyfile  Doxyfile_MAC  build_instructions.md  header.html
doc/feature_new_toc/: feature_new_toc.md
install/: cpack_installer.cmake
install/linux/: create-cde-package.py  install-toolmap.py  readme.txt
install/mac/: InstallDS_Store
install/windows/: install_script-release.nsi  install_script.nsi
old_src/: tmtocctrl.cpp
plugins/lscrashreport/: CMakeLists.txt
resource/dialogs/: 2008dialogs.fbp  Test_Dialogs-autosave.pjd  Test_Dialogs-autosave.pjd.bak  Test_Dialogs.pjd  Test_Dialogs.pjd.bak  addfield.cpp  addfield.h  addspatiallayer.cpp  addspatiallayer.h  addsymbology.cpp  addsymbology.h  adjustshortcuts.cpp  adjustshortcuts.h  app_resources.cpp  app_resources.h  batchattribution.cpp  batchattribution.h  beziersettings_dlg.fbp  complexattribution.cpp  complexattribution.h  dlg_attribution.cpp  dlg_attribution.h  dlg_new_project2.xrc  dlg_new_project3.xrc  dlg_obj_attribution.cpp  dlg_obj_attribution.h  editquery.cpp  editquery.h  editvertexposition.cpp  editvertexposition.h  export-pdf.fbp  export.fbp  importdata.cpp  importdata.h  importlog.cpp  importlog.h  importpartialdatabase.cpp  importpartialdatabase.h  informations.cpp  informations.h  (+45 more)
resource/template/: default_src.cpp  default_src.h
resource/unused_web/: bing_satellite.html  bing_streets.html  yahoo_streets.html
resource/web/: Arcgis_Mapserver.xml  Google_Hybrid.xml  Google_Map.xml  Google_Mix.xml  Google_Satellite.xml  Google_Terrain.xml  OpenStreetMap.xml  VirtualEarth.xml  google_satellite.html  google_streets.html  yahoo_satellite.html
resources/: set-env.bat
resources/dialogs/: attribute_field.xrc  backup_manager.fbp  export_pdf.fbp  menubar.xrc  symbology.fbp  wms.fbp
resources/template/: default_src.cpp  default_src.h
resources/web/: Arcgis_Mapserver.xml  Google_Hybrid.xml  Google_Map.xml  Google_Mix.xml  Google_Satellite.xml  OpenStreetMap.xml  Swisstopo_pixel.xml  Swisstopo_wms.xml  Swisstopo_wmts.xml  VirtualEarth.xml  swisstopo_pixelkarte.xml
src/core/: agg_array.h  agg_basics.h  agg_curves.cpp  agg_curves.h  backup.cpp  backup.h  backupmanager.cpp  backupmanager.h  bezierethz.cpp  bezierethz.h  bezierpoints.cpp  datalistreportctrl.cpp  datalistreportctrl.h  diroperation.cpp  diroperation.h  pdfdocument.cpp  pdfdocument.h  pdfexportwizard.cpp  pdfexportwizard.h  pdflayer.cpp  pdflayer.h  prjdefmemmanage.cpp  prjdefmemmanage.h  projectdefmemory.cpp  projectdefmemory.h  projectmanager.cpp  projectmanager.h  proxy.cpp  proxy.h  queriesbuilder.cpp  queriesbuilder.h  queriesdata.cpp  queriesdata.h  scale.cpp  scale.h  textparser.cpp  textparser.h  tmaattribbatchmanager.cpp  tmaattribbatchmanager.h  tmarraysize.cpp  (+41 more)
src/database/: database-config.h  database-config.h.in  database.cpp  database.h  database_tm.cpp  database_tm.h  databaseresult.cpp  databaseresult.h  db_project.cpp  db_project.h  tableexport.cpp  tableexport.h  tmmergeprojects.cpp  tmmergeprojects.h  tmprojectmaintenance.cpp  tmprojectmaintenance.h  (+2 more)
template/: default_src.cpp
test/: CMakeLists.txt
test/src/: database_environnement.h  main.cpp  test_advancedbatchattribution.cpp  test_backup.cpp  test_bezierethz.cpp  test_database.cpp  test_database_handle.cpp  test_database_handle.h  test_database_tm.cpp  test_databaseresult.cpp  test_export.cpp  test_exportconcat.cpp  test_exporttable.cpp  test_new_database_tm.cpp  test_param.h.in  test_pdf.cpp  test_scaletm.cpp  test_textparser.cpp  test_tmcoordconvert.cpp  test_tmdataintegrity.cpp  test_tmdrawereditline.cpp  test_tmgettingfieldsinfo.cpp  test_tmgisimport.cpp  test_tmmemoryzoom.cpp  test_tmpercent.cpp  test_tmpointorient.cpp  test_tmpointorientattrib.cpp  test_tmprojectupdate.cpp  test_tmprojectupdate2.cpp  test_tmqueries.cpp  test_tmrealpointdist.cpp  test_tmserialize.cpp  test_tmstatsrecords.cpp  test_tmwindowposition.cpp  test_tmwms.cpp  test_tooldanglingnodes.cpp  test_vrrealrect.cpp
test/src_test/: _test_setup.h  database_test.cpp  database_tm_test.cpp  main.cpp  setup.h  test_advancedbatchattribution.h  test_backup.h  test_database.h  test_database_tm.h  test_databaseresult.h  test_export.h  test_exportconcat.h  test_new_database_tm.h  test_param.h  test_param.h.in  test_pdf.h  test_tmcoordconvert.h  test_tmdataintegrity.h  test_tmdrawereditline.h  test_tmgettingfieldsinfo.h  test_tmgisimport.h  test_tmmemoryzoom.h  test_tmpercent.h  test_tmpointorient.h  test_tmpointorientattrib.h  test_tmprojectupdate.h  test_tmprojectupdate2.h  test_tmqueries.h  test_tmstatsrecords.h  test_tmupdate.h  test_tmwindowposition.h  test_tooldanglingnodes.h  tmdrawereditline_test.cpp  tmgisimport_test.cpp  tmpercent_test.cpp  tmpointorient_test.cpp  tmpointorientattrib_test.cpp  tmupdate_test.cpp  tmwindowposition_test.cpp  tooldanglingnodes_test.cpp
txt/: changelog.txt  changelog_database.txt
(+796 files in other folders)
